# sis122-zarvent-repuestos

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  Makefile  README.md  app.py  architecture.md  db.py  docker-compose.yml  final project.code-workspace  pseudo_dataset.csv  pyproject.toml  requirements.txt  sis122-finalproject.code-workspace  sis122_project.code-workspace  skills-lock.json  user_service.py
.cszv/mockups/: dashboard_mockup.html  inventory_mockup.html
database/: README.md  schema.sql  test_pseudo_dataset.sql
design/: procesos.md
docs/: README.md  academic_architecture.md  cszv 20260521.md  datagrip.md  deployment.md  getting-started.md  uv.md
docs/adr/: 001-RDBMS.md  002-architecture.md  003-local-database-with-docker-compose.md  004-executable-database-schema.md
docs/analysis/: actors.md  procedures.md  processes.md  requirements.md  resources.md
docs/cszv/: datagrip.md
docs/database/: README.md  db_explanation.md  docker.md  erd.md  erd_business_research.md  erd_explanation.md  final project.code-workspace  pseudo_dataset.md  schema.sql
docs/defense/: 20260604.md
docs/deployment/: linux.md  macos.md  windows.md
docs/walkthrough/: cszv 20260521.md
presentation/: .env.example  .gitignore  Dockerfile.web  README.md  docker-compose.yml
presentation/docker/: 01-grants.sql  entrypoint.sh  wait_for_mysql.py
scripts/: 000_run_sql_file.py  001_create_database.sql  002_users.sql  003_create_app_user.sql  004_seed_demo_user.py  005_check_database.py  README.md  check_environment.py  check_mysql_connection.py  create  test_root.py
scripts/database/: 001_create_database.sql  apply_schema.sh  (+13 more)
spec/: README.md
templates/: login.html
tests/: conftest.py  factories.py  test_customer_crud.py  test_customer_soft_delete.py  test_dashboard_metrics.py  test_login_flow.py  test_part_crud.py  test_purchase_crud.py  test_purchase_detail_route.py  test_receipt_route.py  test_sales_validation.py  test_setup_database.py  test_sql_trace.py
video/: package-lock.json  package.json
(+74 files in other folders)
