# Python project metadata and dependencies.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zarvent-repuestos"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.0",
    "mysql-connector-python>=9.4.0",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
